--- a/arm/CMakeLists.txt
+++ b/arm/CMakeLists.txt
@@ -1,23 +1,29 @@
 PROJECT(WarChess)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
-#INCLUDE_DIRECTORIES("/opt/sysroot/usr/local/include/")
-#LINK_DIRECTORIES("/opt/sysroot/usr/local/lib")
-SET(CMAKE_TOOLCHAIN_FILE cmake/modules/arm.cmake)
-SET(CMAKE_SOURCE_DIR .)
-SET(CMAKE_MODULE_PATH ${CMAKE_ROOT}/Modules ${CMAKE_SOURCE_DIR}/cmake/modules)
+INCLUDE_DIRECTORIES("/opt/sysroot/usr/local/include/")
+ADD_SUBDIRECTORY(ComVision)
+LINK_DIRECTORIES("/opt/sysroot/usr/local/lib")
+#SET(CMAKE_TOOLCHAIN_FILE cmake/modules/arm.cmake)
+#SET(CMAKE_SOURCE_DIR .)
+#SET(CMAKE_MODULE_PATH ${CMAKE_ROOT}/Modules ${CMAKE_SOURCE_DIR}/cmake/modules)
 AUX_SOURCE_DIRECTORY(. DIR_SRCS)
-#LINK_LIBRARIES(opencv_core opencv_highgui opencv_imgproc)
+SET(EXTRA_LIBS ${EXTRA_LIBSR} ComVision)
+LINK_LIBRARIES(opencv_core opencv_highgui opencv_imgproc)
 ADD_EXECUTABLE(warchess capture.cpp)
-FIND_PACKAGE(libcv REQUIRED)
+TARGET_LINK_lIBRARIES(warchess ComVision)
+#FIND_PACKAGE(libcv REQUIRED)
 #FIND_PACKAGE(libopencv_highgui REQUIRED)
 #FIND_PACKAGE(libopencv_imgproc REQUIRED)
-MARK_AS_ADVANCED(
-	LIBCV_CXX_INCLUDE_DIR
-	LIBCV_CXX_LIBRARIES
-	)
+#MARK_AS_ADVANCED(
+#	LIBCV_CXX_INCLUDE_DIR
+#	LIBCV_CXX_LIBRARIES
+#	)
+#IF(LIBCV_CXX_INCLUDE_DIR)
+#	MESSAGE(STATUS "Found Include Dir")
+#	INCLUDE_DIRECTORIES(${LIBCV_CXX_INCLUDE_DIR})
+#ENDIF(LIBCV_CXX_INCLUDE_DIR)
 
-IF (LIBDB_CXX_INCLUDE_DIR AND LIBDB_CXX_LIBRARIES)
-	MESSAGE(STATUS "Found libcv libraries")
-	INCLUDE_DIRECTORIES(${LIBDB_CXX_INCLUDE_DIR})
-	TARGET_LINK_LIBRARIES(main ${LIBCV_CXX_LIBRARIES})
-ENDIF (LIBDB_CXX_INCLUDE_DIR AND LIBDB_CXX_LIBRARIES) 
+#IF(LIBCV_CXX_LIBRARIES)
+#	MESSAGE(STATUS "Found Lib Dir")
+#	TARGET_LINK_LIBRARIES(warchess ${LIBCV_CXX_LIBRARIES})
+#ENDIF(LIBCV_CXX_LIBRARIES)
